# secretservice-fetcher

./: .commitlintrc.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc  .secretrc.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  get-version.yml  release.yml
examples/: README.md
examples/dummy/: .envrc  .secretrc  app.py  walkthrough.sh
examples/dummy/config/: prod.yaml
examples/systemd/: README.md  dummy.before.service  dummy.env.service  dummy.prepare.service  dummy.wrap.service
src/secretservice_fetcher/: __init__.py  __main__.py  __version__.py  backend.py  cli.py  config.py  debug.py  runner.py
tests/: conftest.py  test_backend.py  test_cli.py  test_config.py  test_runner.py
